Update role variable name

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 
-role_lock_file_path: /etc/ansible-role-iscsi-devices-provisioned
+iscsi_devices_role_lock_file_path: /etc/ansible-role-iscsi-devices-provisioned
 
